tests/ui/pattern/usefulness/issue-39362.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-39362.rs:10:11
   |
LL |     match f {
   |           ^ patterns `Foo::Bar { bar: Bar::C, .. }`, `Foo::Bar { bar: Bar::D, .. }`, `Foo::Bar { bar: Bar::E, .. }` and 1 more not covered
   |
note: `Foo` defined here
  --> $DIR/issue-39362.rs:2:5
   |
LL | enum Foo {
   |      ---
LL |     Bar { bar: Bar, id: usize }
   |     ^^^ not covered
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         Foo::Bar { bar: Bar::B, .. } => (),
LL ~         _ => todo!(),
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
